# thingsboard-python-client-sdk

./: .gitignore  LICENSE  README.md  __init__.py  dev_notes.md  pyproject.toml  sdk_utils.py  setup.py  tb_device_http.py  tb_device_mqtt.py  tb_event_storage.py  tb_gateway_mqtt.py  tb_mqtt_client.py  utils.py
.github/workflows/: codeql.yml
examples/: __init__.py  client_rpc_request.py  hardware_specs_sender.py  request_attributes.py  send multiple telemetry items.py  send_telemetry_and_attr.py  subscription_to_attrs.py
examples/device/: DEPRECATEDclient_provisioning.py  DEPRECATEDtls_connect.py  claim_device.py  claiming_device_pe_only.py  client_provisioning.py  client_rpc_request.py  firmware_update.py  handle_attribute_updates.py  handle_rpc_requests.py  hardware_specs_sender.py  load.py  operational_example.py  request_attributes.py  send_attributes.py  send_client_side_rpc.py  send_telemetry.py  send_telemetry_and_attr.py  send_telemetry_pack.py  send_timeseries.py  subscription_to_attrs.py  tls _connect.py  tls connect example.py  tls_connect.py
examples/gateway/: DEPRECATEDclaiming_device_pe_only.py  DEPRECATEDconnect_disconnect_device.py  DEPRECATEDrequest_attributes.py  DEPRECATEDrespond_to_rpc.py  load.py  (+18 more)
tests/: __init__.py  count_data_points_message_tests.py  firmware_tests.py  gateway_init_tests.py  on_decoded_message_tests.py  rate_limit_tests.py  send_rpc_reply_tests.py  split_message_tests.py  tb_device_mqtt_client_connect_tests.py  tb_device_mqtt_client_tests.py  tb_gateway_mqtt_client_test.py  tb_gateway_mqtt_client_tests.py  test_async_utils.py
(+148 files in other folders)
